# peruvian-health-ai

./: .env.example  .gitignore  Makefile  README.md  backend-plan.md  docker-compose.yml  index.html  insights.md  tailwind.config.ts  vercel.json
.lovable/: plan.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  appointments.py  auth.py  directory.py  doctors.py  encounters.py  meta.py  notifications.py  patients.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  seed.py  session.py
backend/app/db/models/: __init__.py  appointment.py  doctor.py  encounter.py  notification.py  patient.py  refresh_token.py  user.py
backend/app/repositories/: appointments.py  auth.py  doctors.py  encounters.py  notifications.py  patients.py
backend/app/schemas/: appointment.py  auth.py  dashboard.py  doctor.py  encounter.py  notification.py  patient.py  profile.py
backend/app/services/: appointments.py  auth.py  directory.py  doctor_portal.py  encounters.py  history.py  notifications.py  profile.py  serializers.py
backend/migrations/: env.py
backend/migrations/versions/: 20260306_0001_initial.py  20260307_0002_portal_settings_notifications.py  20260308_0003_patient_telegram_handle.py
backend/tests/: conftest.py  test_api.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json
scripts/: update_vercel_tunnel_url.sh
src/: App.css  (+1 more)
(+91 files in other folders)
